# opskit

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml  release-please-config.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  snyk.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
docs/: PLAN.md
specs/001-dns-diagnostics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dns-diagnostics/checklists/: requirements.md
specs/001-dns-diagnostics/contracts/: cli.md  json-envelope.md  python-api.md
specs/002-tls-verification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tls-verification/checklists/: requirements.md
specs/002-tls-verification/contracts/: cli.md  python-api.md
specs/003-net-diagnostics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-net-diagnostics/checklists/: requirements.md
specs/003-net-diagnostics/contracts/: cli.md  python-api.md
specs/004-ad-diagnostics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ad-diagnostics/checklists/: requirements.md
specs/004-ad-diagnostics/contracts/: cli.md  python-api.md
specs/005-net-proxy-checks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-net-proxy-checks/checklists/: requirements.md
specs/005-net-proxy-checks/contracts/: cli.md  python-api.md
specs/006-storage-diagnostics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-storage-diagnostics/checklists/: requirements.md
specs/006-storage-diagnostics/contracts/: cli.md  python-api.md
src/opskit/: __init__.py  __main__.py  cli.py
src/opskit/ad/: README.md  __init__.py  api.py  attributes.py  cli.py  directory.py  discovery.py  errors.py  models.py  output.py
src/opskit/core/: __init__.py  cliutils.py  errors.py  exit_codes.py  output.py  result.py
src/opskit/dns/: README.md  __init__.py  api.py  cli.py  errors.py  models.py  output.py  resolver.py
src/opskit/net/: README.md  __init__.py  api.py  cli.py  errors.py  listener.py  models.py  output.py  proxy.py  tcp.py  udp.py
src/opskit/storage/: README.md  __init__.py  api.py  cli.py  enumerate_.py  errors.py  linux_block.py  models.py  output.py  scan.py
src/opskit/tls/: README.md  __init__.py  api.py  cli.py  errors.py  handshake.py  inspect.py  models.py  output.py
tests/: conftest.py  loopback_proxy.py
tests/contract/: test_json_envelope.py
tests/integration/: conftest.py  test_ad_loopback.py  test_ad_mock_directory.py  test_ad_network.py  test_net_loopback.py  test_net_network.py  test_net_proxy_loopback.py  test_storage_scan_fs.py  test_tls_loopback.py  test_tls_network.py
tests/unit/: test_ad_api.py  test_ad_attributes.py  test_ad_cli.py  test_ad_directory.py  test_ad_discovery.py  test_ad_models.py  test_ad_output.py  test_batch.py  test_cli_lookup.py  test_cliutils.py  test_dns_compare.py  test_dns_lookup.py  test_dns_lookup_all.py  test_dns_reverse.py  test_docs_coverage.py  test_net_api.py  test_net_api_proxy.py  test_net_cli.py  test_net_cli_proxy.py  test_net_listener.py  test_net_output.py  test_net_proxy.py  test_net_proxy_redaction.py  test_net_proxy_spec.py  test_net_target.py  test_net_tcp.py  test_net_udp.py  test_output.py  test_resolver.py  test_smoke.py  test_storage_api.py  test_storage_cli.py  test_storage_enumerate.py  test_storage_linux_block.py  test_storage_output.py  test_storage_scan.py  test_tls_api.py  test_tls_cli.py  test_tls_inspect.py  test_tls_match.py  (+4 more)
