[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opskit"
dynamic = ["version"]
description = "Cross-platform diagnostics for engineers — one toolkit, every OS."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "prabhakar-cg" }]
keywords = ["dns", "diagnostics", "troubleshooting", "cli", "networking", "ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.6,<3",
    "typer>=0.12,<1",
    "rich>=13,<15",
    "platformdirs>=4,<5",
    "tomli>=2 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Prabhakar-cg/opskit"
Repository = "https://github.com/Prabhakar-cg/opskit"
Issues = "https://github.com/Prabhakar-cg/opskit/issues"
Changelog = "https://github.com/Prabhakar-cg/opskit/blob/main/CHANGELOG.md"

[project.scripts]
opskit = "opskit.cli:main"

[project.optional-dependencies]
# Future category extras keep the base install slim:
# tls = ["cryptography>=42"]
# ad  = ["ldap3>=2.9"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "dnslib>=0.9",
    "ruff>=0.6",
    "mypy>=1.11",
    "pyright>=1.1.380",
    "nox>=2024.4",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[tool.hatch.version]
path = "src/opskit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opskit"]

# ---------------------------------------------------------------------------
# Ruff — format + lint (replaces black/isort/flake8/pyupgrade/bandit-lite/pylint)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle (PEP 8) + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "D",             # pydocstyle (PEP 257)
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "S",             # flake8-bandit (security)
    "ANN",           # flake8-annotations
    "PL",            # pylint-derived
    "C4", "SIM", "PTH", "RUF",
]
ignore = ["D203", "D213"]  # incompatible docstring rules; pick one of each pair

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101", "PLR2004"]
"noxfile.py" = ["D", "ANN"]

# ---------------------------------------------------------------------------
# Type checking — mypy --strict + pyright
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"  # mypy's minimum target; runtime support is 3.9+ (verified by the CI matrix)
strict = true
files = ["src", "tests"]
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "strict"

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opskit --cov-report=term-missing --cov-fail-under=90 -m 'not network'"
markers = [
    "network: hits real external resolvers; opt-in, never gates CI (deselected by default)",
]

[tool.coverage.run]
source = ["opskit"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "\\.\\.\\."]
