[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opskit"
dynamic = ["version"]
description = "Cross-platform diagnostics for engineers — one toolkit, every OS."
readme = "README.md"
requires-python = ">=3.9.2"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "prabhakar-cg" }]
keywords = ["dns", "diagnostics", "troubleshooting", "cli", "networking", "ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.6,<3",
    "typer>=0.12,<1",
    "rich>=13,<16",
    "platformdirs>=4,<5",
    "tomli>=2 ; python_version < '3.11'",
    # TLS category: handshake/chain retrieval + certificate parsing (PyCA-maintained).
    "pyopenssl>=24,<27",
    "cryptography>=48.0.1,<50",  # 48.0.1 fixes GHSA-537c-gmf6-5ccf
]

[project.urls]
Homepage = "https://github.com/Prabhakar-cg/opskit"
Repository = "https://github.com/Prabhakar-cg/opskit"
Issues = "https://github.com/Prabhakar-cg/opskit/issues"
Changelog = "https://github.com/Prabhakar-cg/opskit/blob/main/CHANGELOG.md"

[project.scripts]
opskit = "opskit.cli:main"

[project.optional-dependencies]
# Category extras keep the base install slim. ldap3 is quarantined behind the single
# adapter module src/opskit/ad/directory.py (see specs/004-ad-diagnostics/research.md R1).
ad = ["ldap3>=2.9,<3"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "dnslib>=0.9",
    "ldap3>=2.9,<3",  # ad-category tests (mock directory strategy)
    "ruff>=0.6",
    "mypy>=1.11",
    "pyright>=1.1.380",
    # Orchestration/audit tooling runs only on the default (3.12/3.13) CI jobs, never on the
    # Python 3.9 test leg. Scoping them to >=3.10 keeps their transitive deps (pip-audit's
    # requests/urllib3/msgpack, virtualenv's filelock, pip) off the 3.9 resolution, where the
    # patched releases have dropped 3.9 support. The 3.9 test job only needs pytest & friends.
    "nox>=2024.4; python_version >= '3.10'",
    "pip-audit>=2.7; python_version >= '3.10'",
    "pre-commit>=3.7; python_version >= '3.10'",
]

[tool.hatch.version]
path = "src/opskit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opskit"]

# ---------------------------------------------------------------------------
# Ruff — format + lint (replaces black/isort/flake8/pyupgrade/bandit-lite/pylint)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle (PEP 8) + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "D",             # pydocstyle (PEP 257)
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "S",             # flake8-bandit (security)
    "ANN",           # flake8-annotations
    "PL",            # pylint-derived
    "C4", "SIM", "PTH", "RUF",
]
ignore = [
    "D203",   # incompatible docstring rules; pick one of each pair
    "D213",
    "N818",   # domain exceptions (NxDomain, DnsRefused, …) are intentionally not *Error-suffixed
    "E501",   # `ruff format` enforces 88 on code; don't hard-error on long docstrings/strings/URLs
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 9  # DNS query controls (server/transport/timeout/retries/port/…) legitimately need them

[tool.ruff.lint.per-file-ignores]
# Tests: fixture secrets (S105/S106 — the redaction scan is the real gate), local
# imports and combined-with ergonomics are idiomatic in test code.
"tests/**" = ["D", "ANN", "S101", "PLR2004", "S105", "S106", "PLC0415", "SIM117"]
"noxfile.py" = ["D", "ANN"]
# Typer needs Optional[...] (not X | None) on 3.9; CLI commands legitimately have many options:
"src/opskit/**/cli.py" = ["UP007", "UP045", "PLR0913"]
# ad convenience functions mirror every DirectoryConfig field by contract (python-api.md):
"src/opskit/ad/api.py" = ["PLR0913"]
# probe() exposes one keyword-only knob per contract parameter (python-api.md):
"src/opskit/net/api.py" = ["PLR0913"]
# The single untyped-ldap3 quarantine module (research R9): lazy imports by design,
# Any at the wrapped boundary only.
"src/opskit/ad/directory.py" = ["ANN401", "PLC0415"]

# ---------------------------------------------------------------------------
# Type checking — mypy --strict + pyright
# ---------------------------------------------------------------------------
[tool.mypy]
# mypy 2.x can only target >=3.10; the true 3.9 runtime floor is type-checked by pyright
# (pythonVersion = "3.9" below) and exercised by the 3.9 leg of the CI test matrix.
python_version = "3.10"
strict = true
files = ["src"]  # product code is strictly typed; tests are validated by pytest
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# ldap3 ships no py.typed/stubs; it is quarantined in src/opskit/ad/directory.py behind
# typed wrappers (research R9). This override is module-scoped — strictness holds everywhere else.
[[tool.mypy.overrides]]
module = "ldap3.*"
ignore_missing_imports = true

[tool.pyright]
include = ["src"]  # product code is pyright-strict; tests are covered by mypy
pythonVersion = "3.9"
typeCheckingMode = "strict"

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opskit --cov-report=term-missing --cov-fail-under=90 -m 'not network'"
markers = [
    "network: hits real external endpoints (resolvers, TLS hosts); opt-in, never gates CI (deselected by default)",
]

[tool.coverage.run]
source = ["opskit"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "\\.\\.\\."]
